--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -3466,6 +3466,7 @@ a.text-success:hover {
     font-style: normal;
     text-decoration: inherit;
     -webkit-font-smoothing: antialiased;
+    border: 0;
 }
 
 .header-nav-profile .dropdown > a .ink {
@@ -4903,6 +4904,7 @@ select.input-group-lg > .input-group-addon {
     line-height: 45px;
 }
 
+select[multiple],
 textarea.input-group-lg > .input-group-content > .form-control,
 textarea.input-group-lg > .input-group-addon,
 select[multiple].input-group-lg > .input-group-content > .form-control,
@@ -4914,13 +4916,6 @@ select.input-group-lg > .input-group-content > .form-control,
 select.input-group-lg > .input-group-addon {
     height: 45px;
     line-height: 45px;
-}
-
-textarea.input-group-lg > .input-group-content > .form-control,
-textarea.input-group-lg > .input-group-addon,
-select[multiple].input-group-lg > .input-group-content > .form-control,
-select[multiple].input-group-lg > .input-group-addon {
-    height: auto;
 }
 
 .floating-label .input-group-lg > .input-group-content > .form-control ~ label,
