Added sticky container fix for tiny mce toolbar visibility

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11874,3 +11874,9 @@ body {
     }
 }
 /* End of Tiny MCE full screen fix */
+
+#stickyContainer {
+    &.sticky-top {
+        top: 64px;
+    }
+}
