--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -9708,3 +9708,5 @@ body.mce-fullscreen #header {
     /* #menu-bar width */ } }
 
 /* End of Tiny MCE full screen fix */
+#stickyContainer.sticky-top {
+  top: 64px; }
