--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11874,3 +11874,19 @@ body {
     }
 }
 /* End of Tiny MCE full screen fix */
+/* Style for autocompletes based on tagit.js */
+.tagit {
+    li {
+        &.tagit-choice {
+            cursor: pointer;
+
+            >a {
+                &.tagit-close {
+                    &:before {
+                        content: "\00a0"; // some whitespace before the 'x' to remove a tag
+                    }
+                }
+            }
+        }
+    }
+}
