WIP CRUD PickupPoints

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/PickupPoint.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/PickupPoint.cshtml
@@ -1,1 +1,5 @@
-﻿@*TODO: editor for PickupPointPart is basically its address *@
+﻿@using Laser.Orchard.NwazetIntegration.ViewModels;
+
+@model PickupPointPartEditViewModel
+
+@*TODO: editor for PickupPointPart is basically its address *@
