--- a/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
@@ -36,17 +36,17 @@
     .territories-list .single-territory .territory-info .territory-children-counts .single-count {
       display: inline-block; }
 
-.advanced-addresses .order-address-editor .address-editor .address-input {
+.advanced-addresses .order-address-editor .address-editor .address-input, .advanced-addresses .admin-address-editor .address-editor .address-input {
   display: inline-block; }
-  .advanced-addresses .order-address-editor .address-editor .address-input .row {
+  .advanced-addresses .order-address-editor .address-editor .address-input .row, .advanced-addresses .admin-address-editor .address-editor .address-input .row {
     margin-left: 0px;
     margin-right: 0px; }
-    .advanced-addresses .order-address-editor .address-editor .address-input .row label {
+    .advanced-addresses .order-address-editor .address-editor .address-input .row label, .advanced-addresses .admin-address-editor .address-editor .address-input .row label {
       font-size: smaller;
       display: inline-block;
       color: black; }
-  .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input input, .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input select {
+  .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input input, .advanced-addresses .order-address-editor .address-editor .address-input.address-text-input select, .advanced-addresses .admin-address-editor .address-editor .address-input.address-text-input input, .advanced-addresses .admin-address-editor .address-editor .address-input.address-text-input select {
     width: 100%;
     min-width: unset; }
-  .advanced-addresses .order-address-editor .address-editor .address-input .hint {
+  .advanced-addresses .order-address-editor .address-editor .address-input .hint, .advanced-addresses .admin-address-editor .address-editor .address-input .hint {
     display: inline-block; }
