--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -9708,6 +9708,10 @@ body.mce-fullscreen #header {
     /* #menu-bar width */ } }
 
 /* End of Tiny MCE full screen fix */
+#stickyContainer.sticky-top {
+  top: 64px; }
+
+/* End of Tiny MCE full screen fix */
 /* Style for autocompletes based on tagit.js */
 .tagit li.tagit-choice {
   cursor: pointer; }
