--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPickupPointsIndexShape.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPickupPointsIndexShape.cshtml
@@ -1,3 +1,51 @@
-﻿<p>
+﻿@using Laser.Orchard.NwazetIntegration.Models
+@using Orchard.ContentManagement;
+@{ 
+    var pickupPointParts = (IEnumerable<PickupPointPart>)(Model.PickupPoints);
+    var contentManager = (IContentManager)Model.ContentManager;
+    var prefix = (string)Model.Prefix;
+
+    // Html Attributes for the radio button used to select the Pickup Point
+    var selectedPointInputName = string.Join(".",
+        prefix, "SelectedPickupPoint");
+    var selectedPointInputId = string.Join(".",
+        prefix, "SelectedPickupPoint");
+}
+@if(pickupPointParts.Any()) {
+
+    <div class="pickup-point-input-groups">
+        
+        @foreach(var pickupPointPart in pickupPointParts) {
+            var radioId = selectedPointInputId + "_" + pickupPointPart.Id;
+            <div class="input-group d-flex justify-content-between align-items-center">
+                <div class="input-group-prepend flex-fill"
+                     for="@radioId">
+                    <div class="input-group-prepend pickup-point-card"
+                         id="pickup-point-card-@pickupPointPart.Id">
+                        @Display(BuildDisplay(pickupPointPart, "Summary"))
+                    </div>
+                </div>
+                <input type="radio"
+                       name="@selectedPointInputName" id="@radioId"
+                       value="@pickupPointPart.Id"
+                       aria-describedby="pickup-point-card-@pickupPointPart.Id"
+                       class=""/>
+            </div>
+            @*<div>
+                <label>
+                    
+                    <input type="radio"
+                           name="@selectedPointInputName" id="selectedPointInputId"
+                           class="d-none"/>
+                    <div class="pickup-point-card">
+                        @Display(BuildDisplay(pickupPointPart, "Summary"))
+                    </div>
+                </label>
+            </div>*@
+        }
+    </div>
+}
+
+<p>
     Cavalier-Smith and his collaborators revised their classification in 2015. In this scheme they introduced two superkingdoms of Prokaryota and Eukaryota and seven kingdoms. Prokaryota have two kingdoms: Bacteria and Archaea. (This was based on the consensus in the Taxonomic Outline of Bacteria and Archaea, and the Catalogue of Life). The Eukaryota have five kingdoms: Protozoa, Chromista, Plantae, Fungi, and Animalia. In this classification a protist is any of the eukaryotic unicellular organisms.
 </p>
