Update base checkout shapes

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/ShippingSummaryForm.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/ShippingSummaryForm.cshtml
@@ -21,6 +21,7 @@
 
     @* Serialized shipping method *@
     @Html.Hidden("ShippingOption", viewModel.ShippingOption)
+    @Html.Hidden("State", viewModel.State)
 
     <div class="reset-shipping">
         <button type="submit"
