--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
@@ -17,6 +17,7 @@
     Url.Action("Shipping"), FormMethod.Post, new { @id = "shipping-form" })) {
     @*serialized address data*@
     @Html.HiddenFor(m => m.SerializedAddresses)
+    @Html.HiddenFor(m => m.State)
     @Html.HiddenFor(m => m.BillAtSameShippingAddress)
     @*Available shipping options*@
     if (Model.AvailableShippingOptions != null && Model.AvailableShippingOptions.Any()) {
