--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -9717,3 +9717,12 @@ body.mce-fullscreen #header {
   cursor: pointer; }
   .tagit li.tagit-choice > a.tagit-close:before {
     content: "\00a0"; }
+
+/* Corrections to margin and line-heigth to correctly display Blog tabs at backoffice */
+#content {
+  margin-top: 0; }
+
+#local-navigation .localmenu-local-admin li {
+  line-height: 1.6em; }
+  #local-navigation .localmenu-local-admin li a {
+    line-height: 1.6em; }
