Corrected local-navigation margins.

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11899,11 +11899,9 @@ body {
 }
 
 /* Corrections to margin and line-heigth to correctly display Blog tabs at backoffice */
-#content {
-    margin-top: 0;
-}
-
 #local-navigation {
+    margin-bottom: -17px;
+
     .localmenu-local-admin {
         li {
             line-height: 1.6em;
