--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPickupPointsIndexShape.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/CheckoutPickupPointsIndexShape.cshtml
@@ -1,4 +1,4 @@
-﻿@using Laser.Orchard.NwazetIntegration.Models
+﻿@using Laser.Orchard.NwazetIntegration.Models;
 @using Orchard.ContentManagement;
 @{ 
     var pickupPointParts = (IEnumerable<PickupPointPart>)(Model.PickupPoints);
