Added class to enable styling of order BO

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PickupPoint.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PickupPoint.cshtml
@@ -6,7 +6,7 @@
     var addressHasChanged = Model.AddressHasChanged;
 }
 @if(part.IsOrderPickupPoint) {
-    <div class="order-editor col-md-12">
+    <div class="order-editor col-md-12 pickup-point-order">
         <fieldset>
             @if (addressHasChanged) {
                 <legend>
