- Prevent the LocalMenu tags to be rendered if it there is no item to show - revert the css to normalize behaviour of the LocalMenu tabs - Adds a &nbsp; to ensure the content to be outside the top bar of the admin panel

--- a/src/Themes/KrakeAdmin/Views/Layout.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Layout.cshtml
@@ -63,6 +63,7 @@
 
                 @if (Model.LocalNavigation != null) {
                     <div id="local-navigation">
+                        &nbsp; @* needed by the fixed top bar of the admin panel *@
                         @Zone(Model.LocalNavigation)
                     </div>
                 }
