added classes to better style checkout forms

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
@@ -22,7 +22,7 @@
 
 @using (Html.BeginFormAntiForgeryPost(
     Url.Action("Index"), FormMethod.Post, 
-    new { @id = "address-form", @class= "checkout-form address-form" })) {
+    new { @id = "address-form", @class= "checkout-form checkout-address-form" })) {
 
     if (Model.ShippingRequired) {
         if (Model.AdditionalShippingAddressShapes != null
