--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Review.cshtml
@@ -20,7 +20,7 @@
 }
 @using (Html.BeginFormAntiForgeryPost(
     Url.Action("Review"), FormMethod.Post, 
-    new { @id = "review-form", data_analytics_form = "review", @class= "checkout-form review-form" })) {
+    new { @id = "review-form", data_analytics_form = "review", @class= "checkout-form checkout-review-form" })) {
     @*serialized order data*@
     @Html.HiddenFor(m => m.State)
     @Html.HiddenFor(m => m.BillAtSameShippingAddress)
