--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Shipping.cshtml
@@ -15,7 +15,7 @@
 </div>
 @using (Html.BeginFormAntiForgeryPost(
     Url.Action("Shipping"), FormMethod.Post, 
-    new { @id = "shipping-form", @class= "checkout-form shipping-form" })) {
+    new { @id = "shipping-form", @class= "checkout-form checkout-shipping-form" })) {
     @*serialized address data*@
     @Html.HiddenFor(m => m.State)
     @Html.HiddenFor(m => m.BillAtSameShippingAddress)
