added css class to tabs for type of address selector

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
@@ -49,7 +49,7 @@
                 things.
             *@
             <nav>
-                <div class="nav nav-tabs address-tab-headers" id="nav-tab" role="tablist">
+                <div class="nav nav-tabs nav-justified address-tab-headers" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" 
                     id="nav-shipping-address" data-toggle="tab" 
                     href="#nav-shipping" role="tab" 
