--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Checkout/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@using Laser.Orchard.NwazetIntegration.ViewModels;
+﻿@using Laser.Orchard.NwazetIntegration.Models;
+@using Laser.Orchard.NwazetIntegration.ViewModels;
+@using Orchard.ContentManagement;
+
 @model CheckoutViewModel
 @{
 
@@ -27,7 +30,7 @@
         <fieldset class="shipping-address">
             <legend>@T("Shipping Address")</legend>
             @Display.AddressForm(
-                Prefix: "shippingAddressVM",
+                Prefix: "ShippingAddressVM",
                 Address: Model.ShippingAddressVM,
                 IncludeCountry: true,
                 ListAddress:Model.ListAvailableShippingAddress)
@@ -41,12 +44,39 @@
     <fieldset class="billing-address">
         <legend>@T("Billing Address")</legend>
         @Display.AddressForm(
-            Prefix: "billingAddressVM",
+            Prefix: "BillingAddressVM",
             Address: Model.BillingAddressVM,
             IncludeCountry: true,
             ListAddress: Model.ListAvailableBillingAddress)
     </fieldset>
+    @* 5. VAT Number and Fiscal code*@
+    var invoiceSettings = WorkContext.CurrentSite.As<EcommerceInvoiceSettingsPart>();
+    if (invoiceSettings != null && invoiceSettings.EnableInvoiceRequest) {
+        <fieldset class="invoice-information" id="invoice-information">
+            <legend>@T("Invoice information")</legend>
 
+            @if (!invoiceSettings.InvoiceRequestForceChoice) {
+                <div class="address-input invoice-request-input">
+                    @Html.LabelFor(m => m.BillingAddressVM.InvoiceRequest, T("Request invoice").Text, new { @class = "forcheckbox" })
+                    @Html.EditorFor(m => m.BillingAddressVM.InvoiceRequest)
+                    @*jquery onchange sets the*@
+                </div>
+            }
+            else {
+                <input type="hidden" name="@Html.NameFor(m => m.BillingAddressVM.InvoiceRequest)" id="@Html.IdFor(m=>m.BillingAddressVM.InvoiceRequest)" value="@invoiceSettings.InvoiceRequestDefaultValue.ToString()" />
+            }
+            <div class="address-input fiscal-code-input">
+                @Html.LabelFor(m => m.BillingAddressVM.FiscalCode, T("Fiscal code"))
+                @Html.EditorFor(m => m.BillingAddressVM.FiscalCode, new { @class = "input-medium" })
+                @Html.ValidationMessageFor(m => m.BillingAddressVM.FiscalCode)
+            </div>
+            <div class="address-input vat-number-input">
+                @Html.LabelFor(m => m.BillingAddressVM.VATNumber, T("VAT number"))
+                @Html.EditorFor(m => m.BillingAddressVM.VATNumber, new { @class = "input-medium" })
+                @Html.ValidationMessageFor(m => m.BillingAddressVM.VATNumber)
+            </div>
+        </fieldset>
+    }
     <label for="@Html.Id("Email")">@T("e-mail")</label>
     <input id="@Html.Id("Email")" type="text" name="@Html.Name("Email")" value="@Model.Email" class="input-large required" />
     <div class="hint">@T("Please provide an e-mail address for us to use in order to give you updates on your order.")</div>
@@ -59,7 +89,7 @@
     <div class="hint">@T("Please provide a phone number where we can reach you in case we need additional information. This is also required when shipping to some countries.")</div>
 
     <label for="@Html.Id("specialInstructions")">@T("Special Instructions")</label>
-    @Html.TextAreaFor(m => m.SpecialInstructions, new { rows = "6", cols = "80", @class="input-xxlarge"})
+    @Html.TextAreaFor(m => m.SpecialInstructions, new { rows = "6", cols = "80", @class = "input-xxlarge" })
 
     <div>
         <a href="@Url.Action("Index", "ShoppingCart", new { area = "Nwazet.Commerce"})">@T("Back to cart")</a>
